Fix missing background image on login.

--- a/assets/css/flat-admin.css
+++ b/assets/css/flat-admin.css
@@ -2958,7 +2958,7 @@ aside.app-sidebar {
       border-bottom-color: #29c75f; }
 
 .app-login {
-  background-image: url("http://localhost/project_athena_emr/assets/images/collage.jpg");
+  background-image: url("../images/collage.jpg");
   background-size: cover;
   padding: 0 !important; }
   .app-login .app-body {
@@ -3116,7 +3116,7 @@ aside.app-sidebar {
           .app-login .app-body .app-block .app-form .form-footer .btn {
             margin: 0 auto; }
   .app-login.__loading .app-block {
-    filter: url("/assets/images/blur.svg#blur");
+    filter: url("../images/blur.svg#blur");
     -webkit-filter: blur(2px);
     filter: blur(2px);
     transform: scale(0.8); }
